--- a/public/index.html
+++ b/public/index.html
@@ -9,20 +9,19 @@
       name="description"
       content="Finding waves"
     />
-    <link rel="stylesheet" href="index.css" />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/index.css" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Rock+Salt&display=swap" rel="stylesheet">
     <title>Finding waves</title>
   </head>
   <body>
+   
     <div id="root"></div>
-    <scripts>You need to enable JavaScript to run this app.</scripts>
-    
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
