--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Rock+Salt&display=swap" rel="stylesheet">
+    <base href="/"/>
     <title>Finding waves</title>
   </head>
   <body>
